--- a/src/app/components/queues-view/queues-view.component.scss
+++ b/src/app/components/queues-view/queues-view.component.scss
@@ -45,7 +45,7 @@
     cursor: pointer;
     padding-right: 5px;
     &:hover {
-      color: #ef6162;
+      color: #f44336;
     }
   }
   .header {
