--- a/src/styles.scss
+++ b/src/styles.scss
@@ -233,3 +233,8 @@ p {
     padding: 10px;
   }
 }
+
+.white-mat-form-field .mat-form-field-flex {
+  background-color: #fff;
+  padding: 0 5px 6px 5px;
+}
