--- a/src/app/components/apps-view/apps-view.component.scss
+++ b/src/app/components/apps-view/apps-view.component.scss
@@ -59,4 +59,28 @@
     width: 100%;
     text-align: center;
   }
+  .search-wrapper {
+    width: 500px;
+    input {
+      width: calc(100% - 22px);
+      color: #333;
+    }
+    .clear-btn {
+      outline: none;
+      border: none;
+      padding: 0 0 0 4px;
+      cursor: pointer;
+      background: transparent;
+      i {
+        font-size: 18px;
+        &:hover {
+          color: #f44336;
+        }
+      }
+    }
+    .search-icon {
+      margin-left: 4px;
+      font-size: 17px;
+    }
+  }
 }
