--- a/src/app/components/nodes-view/nodes-view.component.html
+++ b/src/app/components/nodes-view/nodes-view.component.html
@@ -56,9 +56,9 @@
 
     <mat-paginator
       #nodesViewMatPaginator
-      [pageSizeOptions]="[5, 10, 20, 50]"
+      [pageSizeOptions]="[10, 20, 50, 100]"
       [ngStyle]="{ display: isNodeDataSourceEmpty() ? 'none' : '' }"
-      (page)="onPaginatorChanged($event)"
+      (page)="onPaginatorChanged()"
       showFirstLastButtons
     ></mat-paginator>
   </div>
@@ -92,7 +92,7 @@
 
       <mat-paginator
         #allocationMatPaginator
-        [pageSizeOptions]="[5, 10, 20, 50]"
+        [pageSizeOptions]="[10, 20, 50, 100]"
         [ngStyle]="{ display: isAllocDataSourceEmpty() ? 'none' : '' }"
         showFirstLastButtons
       ></mat-paginator>
