YUNIKORN-250: Display queue properties in queues page

--- a/src/app/components/nodes-view/nodes-view.component.html
+++ b/src/app/components/nodes-view/nodes-view.component.html
@@ -58,7 +58,7 @@
       #nodesViewMatPaginator
       [pageSizeOptions]="[5, 10, 20, 50]"
       [ngStyle]="{ display: isNodeDataSourceEmpty() ? 'none' : '' }"
-      (page)="onPaginatorChanged($event)"
+      (page)="onPaginatorChanged()"
       showFirstLastButtons
     ></mat-paginator>
   </div>
