--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,7 +21,8 @@
   width: 50px;
   top: 0;
   bottom: 0;
-  background: #323544;
+  // background: #323544;
+  background: #292e34;
   color: #b8bec4;
   font-size: 16px;
   z-index: 1;
@@ -47,7 +48,6 @@
 
 .navigation + .wrapper {
   margin-left: 50px;
-
   -webkit-transition: margin-left 0.8s ease;
   -moz-transition: margin-left 0.8s ease;
   -o-transition: margin-left 0.8s ease;
@@ -78,9 +78,9 @@
   -webkit-font-smoothing: antialiased;
 }
 
-.logo:hover {
-  background: #304e73;
-}
+// .logo:hover {
+//   background: #304e73;
+// }
 
 .logo a {
   text-decoration: none;
@@ -94,7 +94,6 @@
 .logo img {
   float: left;
   width: 38px;
-
   -webkit-transition: width 0.8s ease;
   -moz-transition: width 0.8s ease;
   -o-transition: width 0.8s ease;
@@ -128,10 +127,10 @@
 
 .navigation a .fa-caret-right {
   position: absolute;
-  left: 1px;
+  left: 0px;
   display: none;
-  font-size: 16px;
 }
+
 .navigation .fa {
   min-width: 1em;
 }
@@ -141,9 +140,9 @@
   flex: 1;
 }
 
-.navigation .sub-menu ul .fa + span {
-  margin-left: 0;
-}
+// .navigation .sub-menu ul .fa + span {
+//   margin-left: 0;
+// }
 
 ul.navigation-primary {
   overflow-y: auto;
@@ -166,12 +165,13 @@ ul.navigation-primary {
 
 .navigation li:hover > a {
   color: #fff;
-  background: #404351;
+  // background: #404351;
+  background: #4d5258;
 }
 
-.navigation li:hover ul {
-  display: block;
-}
+// .navigation li:hover ul {
+//   display: block;
+// }
 
 .navigation li a {
   display: flex;
@@ -179,7 +179,7 @@ ul.navigation-primary {
   white-space: nowrap;
   color: inherit;
   text-decoration: none;
-
+  color: #fff;
   -webkit-transition: padding 0.8s ease;
   -moz-transition: padding 0.8s ease;
   -o-transition: padding 0.8s ease;
@@ -191,175 +191,179 @@ ul.navigation-primary {
   padding-left: 25px;
 }
 
-.navigation li ul {
-  display: none;
-  position: absolute;
-  left: 50px;
-  margin-top: -55px;
-  background: #323544;
-  color: #b8bec4;
-  width: 200px;
-  border-left: 1px solid #666;
-  font-size: 16px;
-  overflow-y: auto;
-}
+// .navigation li ul {
+//   display: none;
+//   position: absolute;
+//   left: 50px;
+//   margin-top: -55px;
+//   background: #323544;
+//   color: #b8bec4;
+//   width: 200px;
+//   border-left: 1px solid #666;
+//   font-size: 16px;
+//   overflow-y: auto;
+// }
 
-.navigation.open li ul a {
-  padding-left: 62px;
-}
+// .navigation.open li ul a {
+//   padding-left: 62px;
+// }
 
-.navigation li ul a {
-  padding: 10px 25px 10px 30px;
-}
+// .navigation li ul a {
+//   padding: 10px 25px 10px 30px;
+// }
 
 .navigation li.active > a,
 .navigation li.active:hover > a {
-  color: #3fae2a;
-  background: #2d2f3c;
+  // color: #3fae2a;
+  color: #fff;
+  // background: #2d2f3c;
+  background: #4d5258;
 }
 
 .navigation li.active > a > .fa-caret-right {
   display: inline-block;
+  font-size: 20px;
 }
 
-.sub-menu ul {
-  display: none;
-}
-.open .sub-menu.open ul {
-  display: block;
-}
-.sub-menu li a {
-  margin: 2px;
-  font-size: 13px;
-}
+// .sub-menu ul {
+//   display: none;
+// }
 
-.navigation.open li ul {
-  display: none;
-  position: static;
-  width: auto;
-}
+// .open .sub-menu.open ul {
+//   display: block;
+// }
 
-.navigation.open li.open ul {
-  display: block;
-  overflow: visible;
-  margin-top: 0;
-}
+// .sub-menu li a {
+//   margin: 2px;
+//   font-size: 13px;
+// }
 
-.navigation .fa-angle-up,
-.navigation .fa-angle-down {
-  opacity: 0;
-  -webkit-font-smoothing: antialiased;
-}
+// .navigation.open li ul {
+//   display: none;
+//   position: static;
+//   width: auto;
+// }
 
-.navigation.open .fa-angle-up,
-.navigation.open .fa-angle-down {
-  float: right;
-  -webkit-animation: sub-nav-o 0.8s; /* Safari 4.0 - 8.0 */
-  animation: sub-nav-o 0.8s;
-  opacity: 1;
-}
+// .navigation.open li.open ul {
+//   display: block;
+//   overflow: visible;
+//   margin-top: 0;
+// }
 
-.navigation.open .sub-menu .fa-angle-up,
-.navigation.open .sub-menu.open .fa-angle-down {
-  display: none;
-}
+// .navigation .fa-angle-up,
+// .navigation .fa-angle-down {
+//   opacity: 0;
+//   -webkit-font-smoothing: antialiased;
+// }
 
-.navigation.open .sub-menu.open .fa-angle-up,
-.navigation.open .sub-menu .fa-angle-down {
-  display: inline-block;
-  opacity: 1;
-}
+// .navigation.open .fa-angle-up,
+// .navigation.open .fa-angle-down {
+//   float: right;
+//   -webkit-animation: sub-nav-o 0.8s; /* Safari 4.0 - 8.0 */
+//   animation: sub-nav-o 0.8s;
+//   opacity: 1;
+// }
+
+// .navigation.open .sub-menu .fa-angle-up,
+// .navigation.open .sub-menu.open .fa-angle-down {
+//   display: none;
+// }
+
+// .navigation.open .sub-menu.open .fa-angle-up,
+// .navigation.open .sub-menu .fa-angle-down {
+//   display: inline-block;
+//   opacity: 1;
+// }
 
 /* Safari 4.0 - 8.0 */
-@-webkit-keyframes sub-nav-o {
-  0% {
-    opacity: 0;
-  }
-  80% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
+// @-webkit-keyframes sub-nav-o {
+//   0% {
+//     opacity: 0;
+//   }
+//   80% {
+//     opacity: 0;
+//   }
+//   100% {
+//     opacity: 1;
+//   }
+// }
 
 /* Standard syntax */
-@keyframes sub-nav-o {
-  0% {
-    opacity: 0;
-  }
-  80% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
+// @keyframes sub-nav-o {
+//   0% {
+//     opacity: 0;
+//   }
+//   80% {
+//     opacity: 0;
+//   }
+//   100% {
+//     opacity: 1;
+//   }
+// }
 
 .expander {
   position: absolute;
   left: 0;
   bottom: 0;
   width: 100%;
-  background: #303d54;
   height: 42px;
   line-height: 42px;
-  text-align: center;
-  color: #3fae2a;
-  font-size: 16px;
+  text-align: right;
+  vertical-align: middle;
+  // background: #303d54;
+  background: #292e34;
+  // color: #3fae2a;
+  color: #fff;
+  font-size: 24px;
   cursor: pointer;
 }
 
 .expander .fa-angle-double-left,
 .open .expander .fa-angle-double-right {
   display: none;
+  padding-right: 20px;
 }
+
 .expander .fa-angle-double-right,
 .open .expander .fa-angle-double-left {
   display: inline-block;
-}
-
-.fa-sticky-note-search:after {
-  content: '\f002';
-  font-size: 0.6em;
-  margin-left: -11px;
-  vertical-align: 3px;
+  padding-right: 14px;
 }
 
 /* Secondary Navigation */
-.wrapper.two-column-layout {
-  padding: 0;
-  display: flex;
-}
+// .wrapper.two-column-layout {
+//   padding: 0;
+//   display: flex;
+// }
 
-.wrapper.two-column-layout > * {
-  flex-grow: 1;
-}
+// .wrapper.two-column-layout > * {
+//   flex-grow: 1;
+// }
 
-.nav-title {
-  background-color: #ebebeb;
-  font-size: 20px;
-  font-weight: 500;
-  padding: 20px;
-  height: 60px;
-  color: #333;
-}
+// .nav-title {
+//   background-color: #ebebeb;
+//   font-size: 20px;
+//   font-weight: 500;
+//   padding: 20px;
+//   height: 60px;
+//   color: #333;
+// }
 
-.navigation .logo .fa-angle-down {
-  position: absolute;
-  right: 5px;
-  top: 5px;
-  font-size: 12px;
-  font-weight: 900;
-  color: #43ad49;
-  opacity: 1;
-  width: auto;
-}
+// .navigation .logo .fa-angle-down {
+//   position: absolute;
+//   right: 5px;
+//   top: 5px;
+//   font-size: 12px;
+//   font-weight: 900;
+//   color: #43ad49;
+//   opacity: 1;
+//   width: auto;
+// }
 
-.navigation.open .logo .fa-angle-down {
-  font-size: 16px;
-  top: 20px;
-}
+// .navigation.open .logo .fa-angle-down {
+//   font-size: 16px;
+//   top: 20px;
+// }
 
 .container-fluid {
   padding-top: 61px;
@@ -397,12 +401,13 @@ ul.breadcrumb > li {
   margin-right: 5px;
   margin-top: 18px;
   margin-bottom: 20px;
-  color: #373b44;
+  // color: #373b44;
 }
 
 ul.breadcrumb a {
   text-decoration: none;
-  color: #646977;
+  // color: #646977;
+  color: #666;
 }
 
 ul.breadcrumb a:after {
@@ -410,8 +415,8 @@ ul.breadcrumb a:after {
   margin-left: 5px;
   display: inline-block;
   text-decoration: none;
-  // color: #d1d2d4;
-  color: #646977;
+  // color: #646977;
+  color: #666;
 }
 
 ul.breadcrumb li:last-of-type a:after {
