--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -22,6 +22,7 @@
   &:hover {
     cursor: pointer;
     border: 1px solid #3fae2a;
+    // border: 1px solid #326ce5
   }
   &:focus {
     outline: none;
