--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -19,17 +19,26 @@
 .mat-card {
   padding: 20px;
   margin-bottom: 20px;
-  &:hover {
-    cursor: pointer;
-    border: 1px solid #3fae2a;
-    // border: 1px solid #326ce5
-  }
-  &:focus {
-    outline: none;
-  }
 }
 
 .info-value {
   margin-top: 6px;
   font-size: 1.4em;
+}
+
+.cluster-info {
+  width: 100%;
+  height: 100%;
+  .left-col {
+    width: 35%;
+    max-width: 35%;
+    margin-right: 30px;
+  }
+  .right-col {
+    width: 65%;
+    max-width: 65%;
+  }
+  .grid-row {
+    margin-top: 30px;
+  }
 }
