Fixed typo in template

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -16,7 +16,7 @@
  * limitations under the License.
  -->
 
-<mat-card *ngIf="'false'">
+<mat-card *ngIf="clusterInfo">
   <div class="flex-grid">
     <div class="flex-primary">
       <div class="text-uppercase hwx-light">Name</div>
