YUNIKORN-357: Show error message when APIs are not available

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -19,24 +19,24 @@
 <mat-card *ngIf="clusterInfo">
   <div class="flex-grid">
     <div class="flex-primary">
-      <div class="text-uppercase hwx-light">Name</div>
-      <div class="info-value hwx-strong">{{ clusterInfo.clusterName }}</div>
+      <div class="text-uppercase light-text">Name</div>
+      <div class="info-value strong-text">{{ clusterInfo.clusterName }}</div>
     </div>
     <div class="flex-primary">
-      <div class="text-uppercase hwx-light">Status</div>
-      <div class="info-value hwx-strong">{{ clusterInfo.clusterStatus }}</div>
+      <div class="text-uppercase light-text">Status</div>
+      <div class="info-value strong-text">{{ clusterInfo.clusterStatus }}</div>
     </div>
     <div class="flex-primary">
-      <div class="text-uppercase hwx-light">Nodes</div>
-      <div class="info-value hwx-strong">{{ clusterInfo.activeNodes }}</div>
+      <div class="text-uppercase light-text">Nodes</div>
+      <div class="info-value strong-text">{{ clusterInfo.activeNodes }}</div>
     </div>
     <div class="flex-primary">
-      <div class="text-uppercase hwx-light">Applications</div>
-      <div class="info-value hwx-strong">{{ clusterInfo.runningApplications }}</div>
+      <div class="text-uppercase light-text">Applications</div>
+      <div class="info-value strong-text">{{ clusterInfo.runningApplications }}</div>
     </div>
     <div class="flex-primary">
-      <div class="text-uppercase hwx-light">Containers</div>
-      <div class="info-value hwx-strong">{{ clusterInfo.runningContainers }}</div>
+      <div class="text-uppercase light-text">Containers</div>
+      <div class="info-value strong-text">{{ clusterInfo.runningContainers }}</div>
     </div>
   </div>
 </mat-card>
