--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,34 +39,6 @@ body {
   font-weight: 500;
 }
 
-body {
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-  color: #666;
-  background: #eee;
-}
-
-.hwx-title {
-  font-size: 20px;
-  color: #333;
-  display: inline-block;
-}
-.hwx-subtitle {
-  font-size: 16px;
-  color: #333;
-  margin: 5px 0;
-}
-.hwx-description {
-  margin: 10px 0;
-  font-size: 12px;
-  line-height: 1.432;
-}
-.hwx-inline-description {
-  color: #999;
-  font-size: 12px;
-  line-height: 1;
-  margin-bottom: 5px;
-}
 .text-uppercase {
   text-transform: uppercase;
 }
@@ -75,121 +47,52 @@ body {
   text-align: center;
 }
 
-.hwx-error-border {
+.error-border {
   border-color: #ef6162;
 }
-.hwx-warning-border {
+
+.warning-border {
   border-color: #e98a40;
 }
-.hwx-success-border {
+
+.success-border {
   border-color: #3fae2a;
 }
-.hwx-secondary-border {
-  border-color: #1eb475;
-}
-.hwx-external-border {
-  border-color: #1491c1;
-}
-.hwx-gray-border {
-  border-color: #ebecf1;
-}
 
-.hwx-error-bg {
+.error-bg {
   background: #ef6162;
 }
-.hwx-warning-bg {
+
+.warning-bg {
   background: #e98a40;
 }
-.hwx-success-bg {
+
+.success-bg {
   background: #3fae2a;
 }
-.hwx-secondary-bg {
-  background: #1eb475;
-}
-.hwx-white-bg {
-  background: #fff;
-}
-.hwx-yellow-bg {
-  background: #ffffdd;
-}
-.hwx-external-bg {
-  background: #1491c1;
-}
-.hwx-tertiary-bg {
-  background-color: #4db6ac;
-}
-.hwx-gray-bg {
-  background-color: #ebecf1;
-}
 
-.hwx-error {
+.error-text {
   color: #ef6162;
 }
-.hwx-warning {
+
+.warning-text {
   color: #e98a40;
 }
-.hwx-success {
+
+.success-text {
   color: #3fae2a;
 }
-.hwx-secondary {
-  color: #1eb475;
-}
-.hwx-external {
-  color: #1491c1;
-}
-.hwx-gray {
-  color: #ebecf1;
-}
-.hwx-tertiary {
-  color: #4db6ac;
-}
 
-.hwx-light {
+.light-text {
   color: #999;
 }
-.hwx-strong {
+
+.strong-text {
   color: #333;
 }
-.hwx-regular {
+
+.regular-text {
   color: #666;
-}
-
-.hwx-tag-o-success,
-.hwx-tag-o-green,
-.hwx-tag-o-error,
-.hwx-tag-o-red,
-.hwx-tag-o-warning,
-.hwx-tag-o-orange {
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  border-radius: 10px;
-  padding: 2px 5px;
-  font-size: 0.7em;
-  font-weight: 500;
-}
-
-.hwx-tag-o-error,
-.hwx-tag-o-red {
-  color: #fff;
-  background: #ef6162;
-}
-
-.hwx-tag-o-success,
-.hwx-tag-o-green {
-  color: #fff;
-  background: #3fae2a;
-}
-
-.hwx-tag-o-warning,
-.hwx-tag-o-orange {
-  color: #fff;
-  background: #e98a40;
-}
-
-a,
-a:hover {
-  color: #1491c1;
-  text-decoration: none;
 }
 
 strong {
@@ -199,12 +102,6 @@ strong {
 
 p {
   margin: 10px 0;
-}
-
-.hwx-radius-big {
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
-  border-radius: 6px;
 }
 
 .flex-grid {
