YUNIKORN-409: Fixed help text

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -78,7 +78,7 @@
             <i class="fa fa-question"></i>
           </button>
           <mat-menu #helpMenu="matMenu" xPosition="before">
-            <button mat-menu-item (click)="openYuniKornHelp('/')">Apache YuniKorn</button>
+            <button mat-menu-item (click)="openYuniKornHelp('/')">Apache YuniKorn (Incubating)</button>
             <button mat-menu-item (click)="openYuniKornHelp('/docs')">Documentation</button>
             <button mat-menu-item (click)="openYuniKornHelp('/community/sessions')">
               Sessions and Demos
