YUNIKORN-406: Fix direct yunikorn scheduler api access from yunikorn web

--- a/src/app/components/error-view/error-view.component.html
+++ b/src/app/components/error-view/error-view.component.html
@@ -17,5 +17,5 @@
  -->
 
 <mat-card class="error-view">
-  Oops, Something went wrong. YuniKorn scheduler is not accessible.
+  Oops, something went wrong. YuniKorn scheduler is not accessible.
 </mat-card>
