--- a/src/app/components/apps-view/apps-view.component.html
+++ b/src/app/components/apps-view/apps-view.component.html
@@ -40,11 +40,21 @@
     <mat-table [dataSource]="appDataSource" matSort>
       <ng-container [matColumnDef]="columnDef.colId" *ngFor="let columnDef of appColumnDef">
         <mat-header-cell *matHeaderCellDef mat-sort-header>{{ columnDef.colName }}</mat-header-cell>
-        <ng-container *ngIf="columnDef.colId === 'submissionTime'; else otherCell">
-          <mat-cell *matCellDef="let element"> {{ element['formattedSubmissionTime'] }}</mat-cell>
+
+        <ng-container *ngIf="columnDef.colId === 'submissionTime'; else renderNext_1">
+          <mat-cell *matCellDef="let element">{{ element['formattedSubmissionTime'] }}</mat-cell>
         </ng-container>
-        <ng-template #otherCell>
-          <mat-cell *matCellDef="let element"> {{ element[columnDef.colId] || 'n/a' }} </mat-cell>
+
+        <ng-template #renderNext_1>
+          <ng-container *ngIf="columnDef.colId === 'usedResource'; else renderNext_2">
+            <mat-cell *matCellDef="let element">
+              <span [innerHTML]="columnDef.colFormatter(element[columnDef.colId])"></span>
+            </mat-cell>
+          </ng-container>
+        </ng-template>
+
+        <ng-template #renderNext_2>
+          <mat-cell *matCellDef="let element">{{ element[columnDef.colId] || 'n/a' }}</mat-cell>
         </ng-template>
       </ng-container>
 
@@ -95,7 +105,16 @@
       <mat-table [dataSource]="allocDataSource">
         <ng-container [matColumnDef]="columnDef.colId" *ngFor="let columnDef of allocColumnDef">
           <mat-header-cell *matHeaderCellDef>{{ columnDef.colName }}</mat-header-cell>
-          <mat-cell *matCellDef="let element"> {{ element[columnDef.colId] || 'n/a' }} </mat-cell>
+
+          <ng-container *ngIf="columnDef.colId === 'resource'; else renderNext_3">
+            <mat-cell *matCellDef="let element">
+              <span [innerHTML]="columnDef.colFormatter(element[columnDef.colId])"></span>
+            </mat-cell>
+          </ng-container>
+
+          <ng-template #renderNext_3>
+            <mat-cell *matCellDef="let element">{{ element[columnDef.colId] || 'n/a' }}</mat-cell>
+          </ng-template>
         </ng-container>
 
         <ng-container matColumnDef="noRecord">
