--- a/src/app/components/queues-view/queues-view.component.html
+++ b/src/app/components/queues-view/queues-view.component.html
@@ -29,15 +29,16 @@
 <mat-divider></mat-divider>
 <div class="queues-view">
   <div class="flex-grid">
-    <div class="flex-primary queue-level" *ngFor="let obj of queueLevels">
-      <app-queue-rack
-        *ngIf="queueList[obj.level]"
-        [queueList]="queueList[obj.level]"
-        [nextLevel]="obj.next"
-        (toggleChildren)="toggleQueueChildrenView($event)"
-        (queueSelected)="onQueueItemSelected($event)"
-      ></app-queue-rack>
-    </div>
+    <ng-container *ngFor="let obj of queueLevels">
+      <div class="flex-primary queue-level" *ngIf="queueList[obj.level]">
+        <app-queue-rack
+          [queueList]="queueList[obj.level]"
+          [nextLevel]="obj.next"
+          (toggleChildren)="toggleQueueChildrenView($event)"
+          (queueSelected)="onQueueItemSelected($event)"
+        ></app-queue-rack>
+      </div>
+    </ng-container>
 
     <mat-drawer-container
       class="flex-primary"
@@ -61,19 +62,31 @@
             </div>
             <div class="flex-grid item-wrapper">
               <div class="left-item">Configured Capacity:</div>
-              <div class="right-item">{{ selectedQueue.capacity }}</div>
+              <div
+                class="right-item"
+                [innerHTML]="resourceValueFormatter(selectedQueue.capacity)"
+              ></div>
             </div>
             <div class="flex-grid item-wrapper">
               <div class="left-item">Configured Max Capacity:</div>
-              <div class="right-item">{{ selectedQueue.maxCapacity }}</div>
+              <div
+                class="right-item"
+                [innerHTML]="resourceValueFormatter(selectedQueue.maxCapacity)"
+              ></div>
             </div>
             <div class="flex-grid item-wrapper">
               <div class="left-item">Used Capacity:</div>
-              <div class="right-item">{{ selectedQueue.usedCapacity }}</div>
+              <div
+                class="right-item"
+                [innerHTML]="resourceValueFormatter(selectedQueue.usedCapacity)"
+              ></div>
             </div>
             <div class="flex-grid item-wrapper">
               <div class="left-item">Absolute Used Capacity:</div>
-              <div class="right-item">{{ selectedQueue.absoluteUsedCapacity }}</div>
+              <div
+                class="right-item"
+                [innerHTML]="resourceValueFormatter(selectedQueue.absoluteUsedCapacity)"
+              ></div>
             </div>
             <div class="flex-grid item-wrapper" *ngFor="let prop of selectedQueue.queueProperties">
               <div class="left-item">{{ prop.name }}:</div>
