[YUNIKORN-695] Code refactoring and reformatting in webapp

--- a/src/app/components/donut-chart/donut-chart.component.html
+++ b/src/app/components/donut-chart/donut-chart.component.html
@@ -16,6 +16,6 @@
  * limitations under the License.
  -->
 
-<div [ngStyle]="{ width: width, height: height }">
+<div style="width: 100%; height: 100%">
   <canvas class="donut-chart" id="{{ chartContainerId }}"></canvas>
 </div>
