--- a/src/app/components/error-view/error-view.component.html
+++ b/src/app/components/error-view/error-view.component.html
@@ -17,5 +17,22 @@
  -->
 
 <mat-card class="error-view">
-  Oops, something went wrong. YuniKorn is not accessible.
+  <ng-container *ngIf="apiError && apiError.statusCode; else genericErrorMessage">
+    <mat-card-header class="center-header">
+      <mat-card-title>{{ apiError.statusCode }}: {{ apiError.message }}</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      {{ apiError.description }}
+    </mat-card-content>
+  </ng-container>
+  <ng-template #genericErrorMessage>
+    <mat-card-header class="center-header">
+      <mat-card-title>Oops, something went wrong. YuniKorn is not accessible.</mat-card-title>
+    </mat-card-header>
+  </ng-template>
+  <mat-card-actions>
+    <button mat-button class="try-btn" (click)="retryLastActiveUrlAgain()">
+      Try Again
+    </button>
+  </mat-card-actions>
 </mat-card>
