--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -31,6 +31,10 @@
       <div class="info-value strong-text">{{ clusterInfo.activeNodes }}</div>
     </div>
     <div class="flex-primary">
+      <div class="text-uppercase light-text">NodeSort Policy</div>
+      <div class="info-value strong-text">{{ nodeSortPolicy | titlecase }}</div>
+    </div>
+    <div class="flex-primary">
       <div class="text-uppercase light-text">Applications</div>
       <div class="info-value strong-text">{{ clusterInfo.runningApplications }}</div>
     </div>
