--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,7 +41,7 @@
     <li routerLinkActive="active">
       <a [routerLink]="['/queues']">
         <i class="fa fa-caret-right"></i>
-        <i class="fa fa-sitemap" style="width: 16px;"></i>
+        <i class="fa fa-sitemap" style="width: 16px"></i>
         <span>Queues</span>
       </a>
     </li>
