--- a/src/app/components/error-view/error-view.component.html
+++ b/src/app/components/error-view/error-view.component.html
@@ -31,8 +31,6 @@
     </mat-card-header>
   </ng-template>
   <mat-card-actions>
-    <button mat-button class="try-btn" (click)="retryLastActiveUrlAgain()">
-      Try Again
-    </button>
+    <button mat-button class="try-btn" (click)="retryLastActiveUrlAgain()">Try Again</button>
   </mat-card-actions>
 </mat-card>
