--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -42,6 +42,10 @@
       <div class="text-uppercase light-text">Containers</div>
       <div class="info-value strong-text">{{ clusterInfo.runningContainers }}</div>
     </div>
+    <div class="flex-primary">
+      <div class="text-uppercase light-text">Partition</div>
+      <div class="info-value strong-text">{{ partitionName | titlecase }}</div>
+    </div>
   </div>
 </mat-card>
 
