--- a/src/app/components/queue-rack/queue-rack.component.html
+++ b/src/app/components/queue-rack/queue-rack.component.html
@@ -27,7 +27,7 @@
       <div class="flex-primary queue-label">
         {{ item.queueName }}
       </div>
-      <a href="#" *ngIf="!item.isLeafQueue" (click)="toggleQueueChildren($event, item)">
+      <a href="#" *ngIf="!item.isLeaf" (click)="toggleQueueChildren($event, item)">
         <i class="fas fa-plus-circle" *ngIf="!item.isExpanded"></i>
         <i class="fas fa-minus-circle" *ngIf="item.isExpanded"></i>
       </a>
