--- a/src/app/components/nodes-view/nodes-view.component.scss
+++ b/src/app/components/nodes-view/nodes-view.component.scss
@@ -16,6 +16,11 @@
  * limitations under the License.
  */
 
+.part-label {
+  color: #333;
+  font-size: 1.2em;
+  margin-right: 10px;
+}
 .nodes-view {
   width: 100%;
   height: 100%;
