--- a/src/app/components/queues-view/queues-view.component.scss
+++ b/src/app/components/queues-view/queues-view.component.scss
@@ -73,4 +73,12 @@
       font-weight: 600;
     }
   }
+  .app-link {
+    text-decoration: none;
+    font-size: 1.1em;
+    color: #666;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 }
