[YUNIKORN-1148] Update web repo to remove incubator references

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -79,7 +79,7 @@
           </button>
           <mat-menu #helpMenu="matMenu" xPosition="before">
             <button mat-menu-item (click)="openYuniKornHelp('/')">
-              Apache YuniKorn (Incubating)
+              Apache YuniKorn
             </button>
             <button mat-menu-item (click)="openYuniKornHelp('/docs')">Documentation</button>
             <button mat-menu-item (click)="openYuniKornHelp('/community/sessions')">
