--- a/src/app/components/queues-view/queues-view.component.html
+++ b/src/app/components/queues-view/queues-view.component.html
@@ -84,6 +84,13 @@
                 [innerHTML]="resourceValueFormatter(selectedQueue.guaranteedResource)"
               ></div>
             </div>
+            <div class="flex-grid item-wrapper">
+              <div class="left-item">Absolute Used Capacity:</div>
+              <div
+                class="right-item"
+                [innerHTML]="resourceValueFormatter(selectedQueue.absoluteUsedCapacity)"
+              ></div>
+            </div>
             <div class="flex-grid item-wrapper" *ngFor="let prop of selectedQueue.properties">
               <div class="left-item">{{ prop.name }}:</div>
               <div class="right-item">{{ prop.value }}</div>
