--- a/src/app/components/apps-view/apps-view.component.html
+++ b/src/app/components/apps-view/apps-view.component.html
@@ -61,25 +61,6 @@
   </mat-form-field>
 </div>
 <div class="apps-view">
-  <!-- <mat-form-field class="search-wrapper white-mat-form-field">
-    <input
-      matInput
-      type="text"
-      [(ngModel)]="searchText"
-      placeholder="Search By Application ID"
-      #searchInput
-    />
-    <button
-      class="clear-btn"
-      *ngIf="searchText"
-      (click)="onClearSearch()"
-      matTooltip="Clear Search"
-      matTooltipShowDelay="500"
-    >
-      <i class="far fa-times-circle"></i>
-    </button>
-    <i *ngIf="!searchText" class="fas fa-search search-icon"></i>
-  </mat-form-field> -->
   <div class="mat-elevation-z8">
     <mat-table [dataSource]="appDataSource" matSort>
       <ng-container [matColumnDef]="columnDef.colId" *ngFor="let columnDef of appColumnDef">
@@ -90,7 +71,7 @@
         </ng-container>
 
         <ng-template #renderNext_1>
-          <ng-container *ngIf="columnDef.colId === 'usedResource'; else renderNext_2">
+          <ng-container *ngIf="columnDef.colId === 'usedResource'; else renderNext_1">
             <mat-cell *matCellDef="let element">
               <ng-container *ngIf="columnDef.colFormatter; else showAppRawData">
                 <span [innerHTML]="columnDef.colFormatter(element[columnDef.colId])"></span>
@@ -100,6 +81,14 @@
               </ng-template>
             </mat-cell>
           </ng-container>
+
+          <ng-template #renderNext_1>
+            <ng-container *ngIf="columnDef.colFormatter; else renderNext_2">
+              <mat-cell *matCellDef="let element">
+                <span [innerText]="columnDef.colFormatter(element[columnDef.colId])"></span>
+              </mat-cell>
+            </ng-container>
+          </ng-template>
         </ng-template>
 
         <ng-template #renderNext_2>
