[YUNIKORN-1479] Yunikorn Dashboard fa-question link got broken

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -80,7 +80,7 @@
           <mat-menu #helpMenu="matMenu" xPosition="before">
             <button mat-menu-item (click)="openYuniKornHelp('/')">Apache YuniKorn</button>
             <button mat-menu-item (click)="openYuniKornHelp('/docs')">Documentation</button>
-            <button mat-menu-item (click)="openYuniKornHelp('/community/sessions')">
+            <button mat-menu-item (click)="openYuniKornHelp('/community/events')">
               Sessions and Demos
             </button>
             <button mat-menu-item (click)="openYuniKornHelp('/community/get_involved')">
