--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -20,15 +20,15 @@
   <div class="flex-grid">
     <div class="flex-primary">
       <div class="text-uppercase light-text">Name</div>
-      <div class="info-value strong-text">{{ partition.name }}</div>
+      <div class="info-value strong-text">{{ clusterInfo.clusterName }}</div>
     </div>
     <div class="flex-primary">
       <div class="text-uppercase light-text">Status</div>
-      <div class="info-value strong-text">{{ partition.state }}</div>
+      <div class="info-value strong-text">{{ clusterInfo.clusterStatus }}</div>
     </div>
     <div class="flex-primary">
       <div class="text-uppercase light-text">Nodes</div>
-      <div class="info-value strong-text">{{ partition.totalNodes }}</div>
+      <div class="info-value strong-text">{{ totalNodes | titlecase }}</div>
     </div>
     <div class="flex-primary">
       <div class="text-uppercase light-text">NodeSort Policy</div>
@@ -36,11 +36,11 @@
     </div>
     <div class="flex-primary">
       <div class="text-uppercase light-text">Applications</div>
-      <div class="info-value strong-text">{{ application.Running }}</div>
+      <div class="info-value strong-text">{{ totalApplications | titlecase }}</div>
     </div>
     <div class="flex-primary">
       <div class="text-uppercase light-text">Containers</div>
-      <div class="info-value strong-text">{{ partition.totalContainers }}</div>
+      <div class="info-value strong-text">{{ totalContainers | titlecase }}</div>
     </div>
     <div class="flex-primary">
       <div class="text-uppercase light-text">Partition</div>
